@@ -1,7 +1,7 @@
 #ifndef _OS_BITS_H
 #define _OS_BITS_H
 
-#define OS_BITS  32
+#define OS_BITS  64
 #define OFF_BITS 64
 
 #endif
