@@ -3,6 +3,8 @@ Version 3.04  2011-11-16
  * bug fixed: duplicate files only save one entry ok with trunk file mode
  * bug fixed: sync correctly with more binlog files
  * fdfs_file_info query file info from storage server
+ * bug fixed: php extension compile error using gcc 4.6.1 as:
+   variable 'store_path_index' set but not used
 
 Version 3.03  2011-10-16
  * ignore existed link when sync link file
